Add about page link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </blockquote>
           </div>
           <div class="mission-button">
-            <a href="more-info.html" class="btn yellow darken-2 black-text">More Info</a>
+            <a href="/about" class="btn yellow darken-2 black-text">More Info</a>
           </div>
         </div>
       </div>
@@ -154,6 +154,7 @@
         <p>
           For inquiries regarding pet service, please email 
           <a href="mailto:coral@pawfectpetcare.llc">coral@pawfectpetcare.llc</a>
+          .
         </p>
         <ul>
           <li>Rates vary by each individual inquiry and visit.</li>
@@ -175,7 +176,7 @@
     <!-- Footer -->
     <footer class="page-footer grey darken-3">
       <div class="container center-align">
-        <p class="white-text">© 2025 Pawfect Petcare LLC</p>
+        <p class="white-text">© 2025 Pawfect Petcare LLC.</p>
       </div>
     </footer>
     <!-- Materialize JS -->
